  end of file with an error.
- Xcode wxWidgets and minimal sample project files updated to create Universal
  binaries.
- Fix for setting wxMenuBar more than once.
- wxListBox minimum size bug fixed.
- Fixed wxNotebook off-by-one bug in HitTest.
- Fixed joystick GetXMin/Max bug.
- Fixed Unix domain socket problem in wxIPC.

wxWinCE:

- Pressing build-in joystick on WinCE phones fires wxEVT_JOY_BUTTON_DOWN event.
- Native wxCheckListBox implementation.
- All wxTopLevelWindows resizes accordingly to SIP visibility.
- ::wxGetUserName() implemented.
- wxDisplay enumeration support.
- Fixed wxFileDialog breakage on WinCE due to incorrect structure size.
- New wxSystemOption "wince.dialog.real-ok-cancel" to switch between WinCE
  guidelines with Ok-only dialogs and dialogs using wxButtons.
- Checkable items in wxToolMenuBarTool supported.
- Fixed date formatting and mktime.
- Fixed getting standard folder paths on WinCE.
- Support for backspace key on Smartphone.
- Made both windows wxMediaCtrl Windows backends compilable with wxWinCE - it
  is recommended that you use wxMEDIABACKEND_WMP10 on this platform
  directly, however.
- Added support for the context menu event (wxContextMenuEvent)
  and added platform-specific wxWindow::EnableContextMenu.
- Fixed wxGenericFileDialog to work with WinCE.

wxUniv:

- Send wxEVT_SCROLL_XXX events from wxSlider (Danny Raynor)

wxX11:

- Invisible text problem fixed.
- Bitmap clipping with masks and scaling improved.

Unix:

- NO_GCC_PRAGMA is not used any more, remove checks for it if you used it.


2.6.2
-----

All:

- Fixed wxScopeGuard to work with VC++, documented it.
- Fixed proxy handling in wxURL.
- Added wxEVT_MEDIA_LOADED event for wxMediaCtrl.
- Added new methods to wxMediaCtrl (wxURI version of Load, ShowPlayerControls).
- Added wxZipFSHandler::Cleanup() (Stas Sergeev).
- Added wxImage::RotateHue() and RGB <-> HSV conversions (John Anderson).
- Fixed compilation with IBM xlC compiler.